--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2285,11 +2285,12 @@
                 <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Group prayer</strong>
                 </h3>
+                <p>Enhancing the existing prayer feature to support group prayers. </p>
+
                 <ul>
-                  <li>Will integrated into current prayer feature</li>
-                  <li>Enable <span class="textDecor GLORIFY">create</span> group prayer</li>
-                  <li>Enable <span class="textDecor GLORIFY">participate</span> group prayer</li>
-                  <li>Enable <span class="textDecor GLORIFY">leave</span> group prayer</li>
+                  <li class="listCircle">Enable <span class="textDecor GLORIFY">create</span> group prayer</li>
+                  <li class="listCircle">Enable <span class="textDecor GLORIFY">participate</span> group prayer</li>
+                  <li class="listCircle">Enable <span class="textDecor GLORIFY">leave</span> group prayer</li>
                 </ul>
               </div>
             </div>
@@ -2298,12 +2299,14 @@
                 <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Chat</strong>
                 </h3>
+                <p>Adding a chat icon to the top navigation </p>
+
                 <ul>
-                  <li>Adding a new icon into top navigation</li>
-                  <li>Able to see the <span class="textDecor GLORIFY">notification</span> anytime</li>
-                  <li>Able to <span class="textDecor GLORIFY">receive</span> message and fellowship request from other
-                    fellowship</li>
-                  <li>Enable the <span class="textDecor GLORIFY">compose</span> message with other fellowship</li>
+                  <li class="listCircle">Able to see the notification</li>
+                  <li class="listCircle">Capable of receiving messages and fellowship requests from other fellowships.
+                  </li>
+                  <li class="listCircle">Enable the "Compose Message" feature for communication with other fellowships.
+                  </li>
 
                 </ul>
               </div>
@@ -2313,6 +2316,7 @@
                 <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Fellowship</strong>
                 </h3>
+                <p>Upgrading the current fellowship profile to facilitate fellowship connections. </p>
                 <ul>
                   <li>Adding a new "add/remove" icon to the existing fellowship page</li>
                   <li>Adding a new "message" icon to the each fellowship</li>
@@ -2832,10 +2836,12 @@
             </div>
           </div>
 
-          <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Create a group prayer </strong> </h4>
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Create a group prayer</strong>
+                </h4>
 
                 <h5 class="centerVer">
                   <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
@@ -2843,50 +2849,81 @@
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 2 minutes &#160;</h5>
-
-
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 59 seconds &#160;</h5>
                 <h5 class="centerVer">
                   <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
-                  <div class="iconS"><img src="Profile_Color.svg"></div>
-                  <div class="iconS"><img src="Profile_Color.svg"></div>
-                  <div class="iconS help" title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img src="Profile_Grey.svg"></div>
-
+                  <div class="iconS help" title=" 1 participant accidentally exited the creation page"><img
+                      src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
                 </h5>
                 <h5>
                   <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants mentioned they’d like clearer
                   prompts on what details to include for the prayer topic. &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
                 </h5>
               </div>
             </div>
+
+
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Locate and join an existing group prayer </strong> </h4>
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Locate and join a group prayer</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 43 seconds &#160;</h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  <div class="iconS help"
+                    title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img
+                      src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 3.7/5 &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; All participants desired a filtering option to
+                  narrow down choices &#160;
+                </h5>
+              </div>
+            </div>
 
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Exit or leave a group prayer</strong>
+                </h4>
                 <h5 class="centerVer">
                   <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 2 minutes &#160;</h5>
-
-
-                
-                <h5 class="help" title="The quickest time a user is able to complete a task, assuming no errors.">
-                  Minimum&#58; <strong>Error Rate</strong> </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 3 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 2 minutes &#160;
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 0/3 &#160;
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
                 <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants mentioned they’d like clearer
-                  prompts on what details to include for the prayer topic. &#160;
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.7/5 &#160;
                 </h5>
-                <h5 class="centerVer">
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; One participant mentioned a confirmation prompt
+                  would be reassuring. &#160;
                 </h5>
               </div>
             </div>
@@ -2899,74 +2936,107 @@
             </div>
           </div>
 
+          <div class="Grid Grid--gutters Grid--cols-3">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Identify and accept a request:</strong>
+                </h4>
 
-
-
-
-
-
-
-
-
-          <div class="element">
-            <div class="Grid Grid--gutters Grid--cols-2">
-
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4 class="help"
-                    title="Measure the time taken for users to complete specific tasks. This can provide insights into the complexity or simplicity of the wireframe.">
-                    <strong> Time on Task &#58; </strong>
-                  </h4>
-                  <h5 class="help" title="The quickest time a user is able to complete a task, assuming no errors.">
-                    Minimum&#58; <strong>34 seconds</strong> </h5>
-                  <h5 class="help" title="Identify potential bottlenecks or areas where users may be getting confused.">
-                    Maximum&#58; <strong>96 seconds</strong> </h5>
-                  <h5 class="help" title="A broader understanding of the typical user experience."> Average&#58;
-                    <strong>66 seconds</strong>
-                  </h5>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4 class="help"
-                    title="Analyzing the number of taps needed to complete a task may indicate the efficiency and user-friendliness of the design">
-                    <strong> Taps to Complete: &#58; </strong>
-                  </h4>
-                  <h5 class="help"
-                    title="The most efficient path through the interface that some users are able to find.">
-                    Minimum&#58; <strong>12 Taps</strong> </h5>
-                  <h5 class="help" title="Identify worst-case scenarios or pain points in the user journey.">
-                    Maximum&#58; <strong>30 Taps</strong> </h5>
-                  <h5 class="help" title="A general sense of how many taps users typically need to complete a task.">
-                    Average&#58; <strong>10 Taps</strong> </h5>
-                </div>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 26 seconds &#160;</h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  <div class="iconS help" title=" 1 participant couldn’t find the notification for a new chat request."><img
+                      src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants wanted an indicator for unread messages. &#160;
+                </h5>
               </div>
             </div>
-            <div class="barGraph element">
-              <div class="widthS">
-                <div class="GraphText">User Understanding</div>
-                <div class="GraphText">Task Success Rate</div>
-                <div class="GraphText">User Satisfaction:</div>
-                <div class="GraphText">Error Rate:</div>
+
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Decline a chat request </strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 43 seconds &#160;</h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  <div class="iconS help"
+                    title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img
+                      src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 3.7/5 &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; All participants desired a filtering option to
+                  narrow down choices &#160;
+                </h5>
               </div>
-              <div class="barGraphInner">
-                <article id="bar_graph">
-                  <div
-                    title="Assess whether users understand the overall concept and can navigate through the wireframe without confusion."
-                    class="help grow90"> 90&#37;+ </div>
-                  <div
-                    title=" Identify how many users are able to successfully complete key tasks within the wireframe (e.g., creating a group prayer, joining one, etc.)."
-                    class="help grow90"> 90&#37;+ </div>
-                  <div
-                    title="Collect qualitative feedback from users regarding their satisfaction with the design, aesthetics, and overall concept."
-                    class="help grow70"> 70&#37;+ </div>
-                  <div
-                    title="Monitor the number of errors or misunderstandings users make while interacting with the wireframe. "
-                    class="help grow20"> 20&#37;+ </div>
-                </article>
+            </div>
+
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Compose and send a new message:</strong>
+                </h4>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                </h5>
+                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 3 seconds &#160;</h5>
+                <h5 class="centerVer">
+                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 0/3 &#160;
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>
+                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.7/5 &#160;
+                </h5>
+                <h5>
+                  <strong class="Grey800">Feedback&#58; </strong> &#160; One participant mentioned a confirmation prompt
+                  would be reassuring. &#160;
+                </h5>
               </div>
             </div>
           </div>
+
+
+
+
+
+
+
+          <div class="blankHL"></div>
+
+
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Understanding the processes&#58;</strong>
             </h3>
