--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2831,7 +2831,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3> <strong> Group Prayer </strong> </h3>
+                <h3> <strong> Group Prayer Flow</strong> </h3>
               </div>
             </div>
           </div>
@@ -2844,25 +2844,24 @@
                 </h4>
 
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 59 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  Error Rate&#58; <strong class="Grey800">&#160;1/3 &#160;</strong>
                   <div class="iconS help" title=" 1 participant accidentally exited the creation page"><img
                       src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 58 seconds &#160;</strong></h5>
+
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.3/5 &#160;</strong> </h5>
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants mentioned they’d like clearer
-                  prompts on what details to include for the prayer topic. &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; Two participants mentioned they’d like clearer
+                  prompts on what details to include for the prayer topic. &#160;</strong> 
                 </h5>
               </div>
             </div>
@@ -2874,26 +2873,27 @@
                   <strong class="colorGLORIFYOrange">&#160; Locate and join a group prayer</strong>
                 </h4>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;2/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 43 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
+                  Error Rate&#58; <strong class="Grey800">&#160;1/3 &#160;</strong>
                   <div class="iconS help"
                     title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img
                       src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 46 seconds &#160;</strong></h5>
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 3.7/5 &#160;</strong> </h5>
+
+ 
+
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 3.7/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; All participants desired a filtering option to
-                  narrow down choices &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; All participants desired a filtering option to
+                    narrow down choices &#160;</strong> 
                 </h5>
               </div>
             </div>
@@ -2905,25 +2905,22 @@
                   <strong class="colorGLORIFYOrange">&#160; Exit or leave a group prayer</strong>
                 </h4>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 3 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 0/3 &#160;
+                  Error Rate&#58; <strong class="Grey800">&#160;0/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
 
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 3 seconds &#160;</strong></h5>
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.7/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; One participant mentioned a confirmation prompt
-                  would be reassuring. &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong> 
                 </h5>
               </div>
             </div>
@@ -2931,7 +2928,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h3> <strong> Chat </strong> </h3>
+                <h3> <strong> Chat Flow</strong> </h3>
               </div>
             </div>
           </div>
@@ -2940,28 +2937,30 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange">&#160; Identify and accept a request:</strong>
+                  <strong class="colorGLORIFYOrange">&#160; Identify and accept a request</strong>
                 </h4>
 
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;2/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 26 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
-                  <div class="iconS help" title=" 1 participant couldn’t find the notification for a new chat request."><img
-                      src="Profile_Color.svg"></div>
+                  Error Rate&#58; <strong class="Grey800">&#160;1/3 &#160;</strong>
+                  <div class="iconS help" title=" 1 participant couldn’t find the notification for a new chat request.">
+                    <img src="Profile_Color.svg">
+                  </div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 34 seconds &#160;</strong></h5>
+
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.3/5 &#160;</strong> </h5>
+
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.3/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; Two participants wanted an indicator for unread messages. &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; Two participants wanted an indicator for unread
+                    messages. &#160;</strong> 
                 </h5>
               </div>
             </div>
@@ -2973,26 +2972,26 @@
                   <strong class="colorGLORIFYOrange">&#160; Decline a chat request </strong>
                 </h4>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
-                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 43 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 1/3 &#160;
-                  <div class="iconS help"
-                    title="1 participant struggled to differentiate between ongoing and upcoming sessions"><img
-                      src="Profile_Color.svg"></div>
+                  Error Rate&#58; <strong class="Grey800">&#160;0/3 &#160;</strong>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 6 seconds &#160;</strong></h5>
+
+ 
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
+
+ 
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 3.7/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; All participants desired a filtering option to
-                  narrow down choices &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong> 
                 </h5>
               </div>
             </div>
@@ -3004,37 +3003,107 @@
                   <strong class="colorGLORIFYOrange">&#160; Compose and send a new message:</strong>
                 </h4>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Successful Rate&#58; </strong> &#160; 3/3 &#160;
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                   <div class="iconS"><img src="Profile_Color.svg"></div>
                 </h5>
-                <h5><strong class="Grey800">Average Time on Task &#58; </strong> &#160; 3 seconds &#160;</h5>
                 <h5 class="centerVer">
-                  <strong class="Grey800">Error Rate&#58; </strong> &#160; 0/3 &#160;
+                  Error Rate&#58; <strong class="Grey800">&#160;0/3 &#160;</strong>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
 
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                   <div class="iconS"><img src="Profile_Grey.svg"></div>
                 </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 38 seconds &#160;</strong></h5>
+
+
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.8/5 &#160;</strong> </h5>
+
+
+
+                 
                 <h5>
-                  <strong class="Grey800">Satisfaction Rating&#58; </strong> &#160; 4.7/5 &#160;
-                </h5>
-                <h5>
-                  <strong class="Grey800">Feedback&#58; </strong> &#160; One participant mentioned a confirmation prompt
-                  would be reassuring. &#160;
+                  Feedback&#58; <strong class="Grey800">&#160; Participants felt the chat interface was intuitive &#160;</strong> 
                 </h5>
               </div>
             </div>
           </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h3> <strong> Connect Fellowship Flow </strong> </h3>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160;  Use the icon beside the profile to add a fellowship</strong>
+                </h4>
+
+                <h5 class="centerVer">
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                </h5>
+                <h5 class="centerVer">
+                  Error Rate&#58; <strong class="Grey800">&#160;1/3 &#160;</strong>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 6 seconds &#160;</strong></h5>
+
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
+                <h5>
+                  Feedback&#58; <strong class="Grey800">&#160; 1 participant found the icon a little small &#160;</strong> 
+                </h5>
+              </div>
+            </div>
+
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange">&#160; Remove or disconnect from a fellowship</strong>
+                </h4>
+                <h5 class="centerVer">
+                  Successful Rate&#58; <strong class="Grey800">&#160;3/3 &#160;</strong>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                  <div class="iconS"><img src="Profile_Color.svg"></div>
+                </h5>
+                <h5 class="centerVer">
+                  Error Rate&#58; <strong class="Grey800">&#160;0/3 &#160;</strong>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                  <div class="iconS"><img src="Profile_Grey.svg"></div>
+                </h5>
+                <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 13 seconds &#160;</strong></h5>
+                <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.8/5 &#160;</strong> </h5>
+
+ 
+
+                <h5>
+                  Feedback&#58; <strong class="Grey800">&#160; One participant suggested adding a reason or feedback option for disconnection &#160;</strong> 
+                </h5>
+              </div>
+            </div>
+
+
+   
+          </div>
 
 
 
+          <div class="blankHS"></div>
 
 
-
-
-          <div class="blankHL"></div>
 
 
           <div class="element">
