--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2656,6 +2656,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2666,6 +2668,7 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
 
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Objective &#38; Methodology</strong>
@@ -2814,19 +2817,21 @@
 
           </div>
 
+          <div class="blankHS"></div>
 
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Analyze the Testing Results <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
+                <h2 class="tArrow">Testing Results <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <!-- wireframe 1 -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2861,7 +2866,7 @@
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.3/5 &#160;</strong> </h5>
                 <h5>
                   Feedback&#58; <strong class="Grey800">&#160; Two participants mentioned they’d like clearer
-                  prompts on what details to include for the prayer topic. &#160;</strong> 
+                    prompts on what details to include for the prayer topic. &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -2889,11 +2894,11 @@
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 46 seconds &#160;</strong></h5>
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 3.7/5 &#160;</strong> </h5>
 
- 
+
 
                 <h5>
                   Feedback&#58; <strong class="Grey800">&#160; All participants desired a filtering option to
-                    narrow down choices &#160;</strong> 
+                    narrow down choices &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -2920,7 +2925,7 @@
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 3 seconds &#160;</strong></h5>
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
                 <h5>
-                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong> 
+                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -2960,7 +2965,7 @@
 
                 <h5>
                   Feedback&#58; <strong class="Grey800">&#160; Two participants wanted an indicator for unread
-                    messages. &#160;</strong> 
+                    messages. &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -2986,12 +2991,12 @@
                 </h5>
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 6 seconds &#160;</strong></h5>
 
- 
+
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
 
- 
+
                 <h5>
-                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong> 
+                  Feedback&#58; <strong class="Grey800">&#160; No major issues. &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -3022,9 +3027,10 @@
 
 
 
-                 
+
                 <h5>
-                  Feedback&#58; <strong class="Grey800">&#160; Participants felt the chat interface was intuitive &#160;</strong> 
+                  Feedback&#58; <strong class="Grey800">&#160; Participants felt the chat interface was intuitive
+                    &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -3040,7 +3046,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
-                  <strong class="colorGLORIFYOrange">&#160;  Use the icon beside the profile to add a fellowship</strong>
+                  <strong class="colorGLORIFYOrange">&#160; Use the icon beside the profile to add a fellowship</strong>
                 </h4>
 
                 <h5 class="centerVer">
@@ -3060,7 +3066,8 @@
 
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 5/5 &#160;</strong> </h5>
                 <h5>
-                  Feedback&#58; <strong class="Grey800">&#160; 1 participant found the icon a little small &#160;</strong> 
+                  Feedback&#58; <strong class="Grey800">&#160; 1 participant found the icon a little small
+                    &#160;</strong>
                 </h5>
               </div>
             </div>
@@ -3087,120 +3094,70 @@
                 <h5>Average Time on Task &#58; <strong class="Grey800">&#160; 13 seconds &#160;</strong></h5>
                 <h5> Satisfaction Rating&#58;<strong class="Grey800">&#160; 4.8/5 &#160;</strong> </h5>
 
- 
+
 
                 <h5>
-                  Feedback&#58; <strong class="Grey800">&#160; One participant suggested adding a reason or feedback option for disconnection &#160;</strong> 
+                  Feedback&#58; <strong class="Grey800">&#160; One participant suggested adding a reason or feedback
+                    option for disconnection &#160;</strong>
                 </h5>
               </div>
             </div>
 
 
-   
+
           </div>
 
 
 
           <div class="blankHS"></div>
 
-
-
-
-          <div class="element">
-            <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Understanding the processes&#58;</strong>
-            </h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-              <div class="Grid Grid--full">
-
-                <div class="Grid-cell">
-                  <p> The majority of testers were able to understand the process of participating in group prayer,
-                    adding a new fellowship, and starting a chat within 2 minutes. They appreciated the clear
-                    annotations and visual cues.
-                  </p>
-                </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Confusion and Recommendations <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
-              <div class="blankHXS"></div>
             </div>
-
-            <h3 class="accordion noMargin withBg"><strong>Navigating the wireframes&#58;
-              </strong></h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <p>Testers generally found the wireframes easy to navigate, with a median time of 32 seconds to locate
-                    the 'Group Prayer' and 'Fellowship' sections. Some testers suggested that a table of contents or an
-                    overview map of the wireframes would be helpful.
-                  </p>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion noMargin withBg"><strong>Interactivity in group prayer&#58;</strong>
-            </h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-
-
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <p>Testers praised the representation of interactive elements in the group prayer wireframe. Some
-                    recommended more detailed annotations to fully express the real-time nature of reactions and
-                    comments during the group prayer.
-                  </p>
-                </div>
-
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Potential roadblocks and
-                solutions&#58;</strong>
-            </h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-              <div class="Grid Grid--gutters Grid--cols-2">
-                <div class="Grid-cell">
-                  <p><strong>Interactive Features During Waiting Time&#58;</strong> Testers found the wireframes
-                    representing the
-                    creation/joining process of a group prayer quite intuitive. The median time to understand the
-                    process was 1 minute and 45 seconds. <span class="textDecor GLORIFY">It seems users would appreciate
-                      more
-                      engagement while waiting for the group prayer to start</span>. One solution could be to introduce
-                    interactive elements such as trivia questions about the Bible, thought-provoking quotes, or serene
-                    religious imagery. This could <span class="textDecor GLORIFY">keep users engaged and occupied during
-                      the waiting time.</span> </p>
-                </div>
-                <div class="Grid-cell">
-                  <p><strong>Chatting with Fellowship Members Post-Prayer&#58;</strong>The chat function was favorably
-                    received, with testers finding it easy to comprehend from the wireframes. The average time taken to
-                    understand the process was 1 minute and 15 seconds. Some testers suggested that <span
-                      class="textDecor GLORIFY">chat or fellowship requests should be approved before initiating a
-                      conversation</span> . Additionally, implementing push notifications for new chat messages was
-                    proposed to ensure users don't miss any ongoing discussions.
-                  </p>
-                </div>
-              </div>
-
-              <div class="Grid Grid--gutters Grid--cols-2">
-                <div class="Grid-cell">
-                  <p><strong>Joining an Existing Group Prayer&#58;</strong> To facilitate the process of <span
-                      class="textDecor GLORIFY">finding and joining suitable groups</span>, introduce a search function
-                    or filtering options. These could include filters for group size, frequency of meetings, focus of
-                    prayers, or even a filter for groups that users have bookmarked or saved.</p>
-                </div>
-                <div class="Grid-cell">
-                  <p><strong>Adding New Fellowships after Group Prayer&#58;</strong> The process of exploring and adding
-                    new fellowships after group prayer was clear to most testers, but they expressed a <span
-                      class="textDecor GLORIFY">desire to connect with others during this process</span>. It may be
-                    beneficial to make the 'Add Fellowship' feature more flexible, allowing it to be used at any time
-                    during group prayer.</p>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-
           </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--cols-2">
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconTest.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange"> Points of Confusion</strong>
+                </h3>
+
+                <ul>
+                  <li class="listCircle">View specific details related to the topic of group prayer.</li>
+                  <li class="listCircle">Locating new chat request notifications.</li>
+                  <li class="listCircle">Recognizing the icon to add a fellowship.</li>
+
+                </ul>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element ">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="iconLearn.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange"> Recommendations</strong>
+                </h3>
+                <ul>
+                  <li class="listCircle">Able to see some details related to the topic of group prayer.</li>
+
+                  <li class="listCircle">Enhance visibility or placement of new chat notifications.</li>
+                  <li class="listCircle">Increase the size of the fellowship icon and consider tooltip hints.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+
+
 
 
 
@@ -4215,6 +4172,99 @@
         </div>
 
         <div class="blankHS"></div>
+        <div class="element wrapper">
+          <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Understanding the processes&#58;</strong>
+          </h3>
+          <div class="accordion-content">
+            <div class="blankHXS"></div>
+            <div class="Grid Grid--full">
+
+              <div class="Grid-cell">
+                <p> The majority of testers were able to understand the process of participating in group prayer,
+                  adding a new fellowship, and starting a chat within 2 minutes. They appreciated the clear
+                  annotations and visual cues.
+                </p>
+              </div>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+
+          <h3 class="accordion noMargin withBg"><strong>Navigating the wireframes&#58;
+            </strong></h3>
+          <div class="accordion-content">
+            <div class="blankHXS"></div>
+            <div class="Grid Grid--full">
+              <div class="Grid-cell">
+                <p>Testers generally found the wireframes easy to navigate, with a median time of 32 seconds to locate
+                  the 'Group Prayer' and 'Fellowship' sections. Some testers suggested that a table of contents or an
+                  overview map of the wireframes would be helpful.
+                </p>
+              </div>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <h3 class="accordion noMargin withBg"><strong>Interactivity in group prayer&#58;</strong>
+          </h3>
+          <div class="accordion-content">
+            <div class="blankHXS"></div>
+
+
+            <div class="Grid Grid--full">
+              <div class="Grid-cell">
+                <p>Testers praised the representation of interactive elements in the group prayer wireframe. Some
+                  recommended more detailed annotations to fully express the real-time nature of reactions and
+                  comments during the group prayer.
+                </p>
+              </div>
+
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+          <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Potential roadblocks and
+              solutions&#58;</strong>
+          </h3>
+          <div class="accordion-content">
+            <div class="blankHXS"></div>
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <p><strong>Interactive Features During Waiting Time&#58;</strong> Testers found the wireframes
+                  representing the
+                  creation/joining process of a group prayer quite intuitive. The median time to understand the
+                  process was 1 minute and 45 seconds. <span class="textDecor GLORIFY">It seems users would appreciate
+                    more
+                    engagement while waiting for the group prayer to start</span>. One solution could be to introduce
+                  interactive elements such as trivia questions about the Bible, thought-provoking quotes, or serene
+                  religious imagery. This could <span class="textDecor GLORIFY">keep users engaged and occupied during
+                    the waiting time.</span> </p>
+              </div>
+              <div class="Grid-cell">
+                <p><strong>Chatting with Fellowship Members Post-Prayer&#58;</strong>The chat function was favorably
+                  received, with testers finding it easy to comprehend from the wireframes. The average time taken to
+                  understand the process was 1 minute and 15 seconds. Some testers suggested that <span
+                    class="textDecor GLORIFY">chat or fellowship requests should be approved before initiating a
+                    conversation</span> . Additionally, implementing push notifications for new chat messages was
+                  proposed to ensure users don't miss any ongoing discussions.
+                </p>
+              </div>
+            </div>
+
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <p><strong>Joining an Existing Group Prayer&#58;</strong> To facilitate the process of <span
+                    class="textDecor GLORIFY">finding and joining suitable groups</span>, introduce a search function
+                  or filtering options. These could include filters for group size, frequency of meetings, focus of
+                  prayers, or even a filter for groups that users have bookmarked or saved.</p>
+              </div>
+              <div class="Grid-cell">
+                <p><strong>Adding New Fellowships after Group Prayer&#58;</strong> The process of exploring and adding
+                  new fellowships after group prayer was clear to most testers, but they expressed a <span
+                    class="textDecor GLORIFY">desire to connect with others during this process</span>. It may be
+                  beneficial to make the 'Add Fellowship' feature more flexible, allowing it to be used at any time
+                  during group prayer.</p>
+              </div>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
 
         </div>
       </section>
