--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1233,38 +1233,47 @@
           <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingXS"></div>
-                <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
+                <div class="WarmBg paddingXS">
+                  <div class="WhiteBg spacing4"></div>
+                </div>
+                <p><strong>XS</strong> 6 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingS"></div>
-                <p><strong>S</strong> 8 px &#47; 0.5 em</p>
+                <div class="WarmBg paddingS">
+                  <div class="WhiteBg spacing4"></div>
+                </div>
+                <p><strong>S</strong> 10 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingM"></div>
-                <p><strong>M</strong> 12 px &#47; 0.75 em</p>
+                <div class="WarmBg paddingM">
+                  <div class="WhiteBg spacing4"></div>
+                </div>
+                <p><strong>M</strong> 14 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingL"></div>
-                <p><strong>L</strong> 16 px &#47; 1 em</p>
+                <div class="WarmBg paddingL">
+                  <div class="WhiteBg spacing4"></div>
+                </div>                <p><strong>L</strong> 18 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingXL"></div>
-                <p><strong>XL</strong> 20 px &#47; 1.25 em</p>
+                <div class="WarmBg paddingXL">
+                  <div class="WhiteBg spacing4"></div>
+                </div>                <p><strong>XL</strong> 22 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="WarmBg paddingMax"></div>
-                <p><strong>Max</strong> 24 px &#47; 1.5 em</p>
+                <div class="WarmBg paddingMax">
+                  <div class="WhiteBg spacing4"></div>
+                </div>                <p><strong>Max</strong> 26 px</p>
               </div>
             </div>
           </div>
