--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1218,6 +1218,7 @@
               </div>
             </div>
           </div>
+
           <div class="blankHM"></div>
 
           <!-- Arrow -->
@@ -1259,22 +1260,40 @@
               <div class="element">
                 <div class="WarmBg paddingL">
                   <div class="WhiteBg spacing4"></div>
-                </div>                <p><strong>L</strong> 18 px</p>
+                </div>
+                <p><strong>L</strong> 18 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
                 <div class="WarmBg paddingXL">
                   <div class="WhiteBg spacing4"></div>
-                </div>                <p><strong>XL</strong> 22 px</p>
+                </div>
+                <p><strong>XL</strong> 22 px</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
                 <div class="WarmBg paddingMax">
                   <div class="WhiteBg spacing4"></div>
-                </div>                <p><strong>Max</strong> 26 px</p>
+                </div>
+                <p><strong>Max</strong> 26 px</p>
               </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="element">
+              <pre>
+              <div class="codeTiltle">HTML</div>
+              <code>
+                &lt;div class="paddingXS"&gt;&lt;/div&gt;
+                &lt;div class="paddingS"&gt;&lt;/div&gt;
+                &lt;div class="paddingM"&gt;&lt;/div&gt;
+                &lt;div class="paddingL"&gt;&lt;/div&gt;
+                &lt;div class="paddingXL"&gt;&lt;/div&gt;
+                &lt;div class="paddingMax"&gt;&lt;/div&gt;
+              </code>
+            </pre>
             </div>
           </div>
           <div class="blankHM"></div>
@@ -2006,7 +2025,7 @@
           <!-- Arrow -->
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2087,20 +2106,11 @@
 
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element displayNone">
 
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element displayNone">
-
-              </div>
-            </div>
 
           </div>
 
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2165,19 +2175,11 @@
 
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element displayNone">
 
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element displayNone">
 
-              </div>
-            </div>
 
           </div>
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2267,33 +2269,12 @@
                 </div>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly" contenteditable="true">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/icon_research.svg" alt="Arrow Down">
-                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
 
-                <div class="ClipboardBoxIconOnly">
-                  <button class="ClipboardIconOnly" contenteditable="true">
-                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
-                      src="../icon/iconAlert.svg" alt="Arrow Back">
-                    <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
-                  </button>
-                </div>
 
-              </div>
-            </div>
 
           </div>
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2338,6 +2319,41 @@
                 </div>
               </div>
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                      src="../icon/icon_research.svg" alt="Arrow Down">
+                    <p class="clickIconCopy">src="../icon/arrow-down.svg" alt="Arrow Down"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                      src="../icon/iconAlert.svg" alt="Arrow Back">
+                    <p class="clickIconCopy">src="../icon/arrow-back.svg" alt="Arrow Back"</p>
+                  </button>
+                </div>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element"></div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element"></div>
+            </div>
+
+          </div>
+
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
+
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2404,10 +2420,7 @@
                 </div>
               </div>
             </div>
-          </div>
 
-
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
@@ -2430,6 +2443,12 @@
                 </div>
               </div>
             </div>
+
+          </div>
+
+
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
+
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
