--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1306,49 +1306,49 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
+
+            
             <div class="Grid-cell">
               <div class="element">
-                <div class="Testing borderRadiusXS"></div>
-                <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
-
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Testing borderRadiusS"></div>
-                <p><strong>S</strong> 8 px &#47; 0.5 em</p>
-
+                  <div class="WarmBg spacing6 borderRadiusXS"></div>
+                  <p><strong>XS</strong> 4 px &#47; 0.25 em</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="Testing borderRadiusM"></div>
-                <p><strong>M</strong> 12 px &#47; 0.75 em</p>
-
-              </div>
-            </div>
-            <div class="Grid-cell borderRadiusL">
-              <div class="element">
-                <div class="Testing borderRadiusM"></div>
-                <p><strong>L</strong> 16 px &#47; 1 em</p>
-
-              </div>
+                  <div class="WarmBg spacing6 borderRadiusS"></div>
+                  <p><strong>S</strong> 8 px &#47; 0.5 em</p>
+                </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="Testing borderRadiusXL"></div>
-                <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+                  <div class="WarmBg spacing6 borderRadiusM"></div>
+                  <p><strong>M</strong> 12 px &#47; 0.75 em</p>
+                </div>
+            </div>
 
-              </div>
+
+            <div class="Grid-cell">
+              <div class="element">
+                  <div class="WarmBg spacing6 borderRadiusL"></div>
+                  <p><strong>L</strong> 16 px &#47; 1 em</p>
+                </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="Testing borderRadiusMax"></div>
-                <p><strong>Max</strong> 50%</p>
-
-              </div>
+                  <div class="WarmBg spacing6 borderRadiusXL"></div>
+                  <p><strong>XL</strong> 24 px &#47; 1.25 em</p>
+                </div>
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+                  <div class="WarmBg spacing6 borderRadiusMax"></div>
+                  <p><strong>Max</strong> 50%</p>
+                </div>
+            </div>
+ 
+ 
           </div>
           <div class="wrapper">
             <div class="element">
@@ -1485,65 +1485,47 @@
             </div>
           </div>
 
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter">
+
+
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="Demo">
-                <div class="elementInnerDemo content-1of12"></div>
+                <div class="elementInnerDemo content-1of8"></div>
               </div>
             </div>
           </div>
@@ -1578,19 +1560,19 @@
                       &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of6"&gt;&lt;/div&gt;&lt;/div&gt;
                       &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of6"&gt;&lt;/div&gt;&lt;/div&gt;
                     &lt;/div&gt;
-                    &lt;div class="Grid Grid--gutters Grid--cols-12 u-textCenter"&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
-                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of12"&gt;&lt;/div&gt;&lt;/div&gt;
+                    &lt;div class="Grid Grid--gutters Grid--cols-8 u-textCenter"&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
+                      &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of8"&gt;&lt;/div&gt;&lt;/div&gt;
                     &lt;/div&gt;  
               </code>
             </pre>
@@ -2598,7 +2580,7 @@
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
-          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter Grid--center">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ClipboardBoxIconOnly">
